grammar.js
  word: ($) => $.word,

  rules: {
    program: ($) => optional($._statements),

    _statements: ($) => seq(repeat(seq($._statement, $._terminator)), $._statement, optional($._terminator)),

    _terminated_statements: ($) => repeat1(seq($._statement, $._terminator)),

    // A newline is significant only where it can end a statement; elsewhere it is whitespace.
    _statement: ($) =>
      choice($._command_statement, $.pipeline, $.list, $.negated_command, $.timed_command, $.coproc_command),

    list: ($) =>
      prec.left(
        1,
        seq(field('left', $._statement), field('operator', choice('&&', '||')), field('right', $._statement))
      ),

    pipeline: ($) => prec.left(3, seq($._pipeline_element, repeat1(seq(choice('|', '|&'), $._pipeline_element)))),

    _pipeline_element: ($) => choice($._command_statement, $.coproc_command),

    command: ($) =>
      prec.left(
        choice(
          seq(
            repeat($._command_prefix),
            field('name', $.command_name),
            repeat(
              seq(
                optional($._backtick_comment_boundary),
                choice(field('argument', $._argument), field('redirect', $._redirect))
              )
            )
          ),
          repeat1($._command_prefix)
        )
      ),

    _command_prefix: ($) => choice(field('assignment', $.variable_assignment), field('redirect', $._redirect)),

    command_name: ($) => seq(optional($._backtick_comment_boundary), $._word),

    variable_assignment: ($) =>
      seq(
        field('name', choice($.variable_name, $.subscript)),
        field('operator', token.immediate(choice('=', '+='))),
        field('value', choice($._argument, $._hash_value, $.array, $._empty_value))
      ),

    // A value is not at the start of a word, so a leading `#` is literal (`color=#fff`).
    _hash_value: ($) => choice(alias($._hash_word, $.word), alias($._hash_concatenation, $.concatenation)),

    _redirect: ($) => choice($.file_redirect, $.heredoc_redirect, $.herestring_redirect),

    heredoc_redirect: ($) =>
      seq(
        optional(field('descriptor', $.file_descriptor)),
        field('operator', choice(alias($._heredoc_arrow, '<<'), alias($._heredoc_arrow_dash, '<<-'))),
        field('delimiter', $.heredoc_start)
      ),

    // The scanner opens a body at the newline that ends the line holding its `<<` operator, so bodies
    // appear, in operator order, wherever that newline falls.
    heredoc_body: ($) =>
      seq(
        $._heredoc_body_start,
        repeat(
          choice($.heredoc_content, $.simple_expansion, $.expansion, $.command_substitution, $.arithmetic_expansion)
        ),
        $.heredoc_end
      ),

    test_command: ($) => seq('[[', $._test_expression, ']]'),

    _test_expression: ($) =>
      choice(
        $._word,
        $.unary_test,
        $.binary_test,
        $.regex_test,
        alias($._test_negation, $.negated_test),
        alias($._test_logical, $.logical_test),
        alias($._test_parenthesized, $.parenthesized_test)
      ),

    regex_test: ($) =>
      prec(
        PREC.COMPARE,
        seq(
          field('left', $._word),
          field('operator', '=~'),
          $._regex_start,
          field('right', choice($._regex_part, alias($._regex_concatenation, $.concatenation)))
        )
      ),

    _regex_concatenation: ($) => prec.right(seq($._regex_part, repeat1(seq($._regex_concat, $._regex_part)))),

    _regex_part: ($) => choice($.regex, $._quoted_or_expansion),

    _word: ($) => choice($._word_part, $.concatenation),

    // Outside command position a leading `!(` is a negated extglob group rather than `!` negating a
    // subshell.
    _argument: ($) =>
      choice(
        $._word,
        alias($._negated_extglob_word, $.word),
        alias($._negated_extglob_pattern, $.extglob_pattern),
        alias($._negated_extglob_concatenation, $.concatenation)
      ),

    // A word led by a negated group (`!($x)b`, `!(a)$x`).
    concatenation: ($) =>
      prec.right(
        seq(
          $._word_part,
          repeat1(
            seq(
              $._concat,
              choice($._word_part, alias($._hash_word, $.word), alias($._negated_extglob_pattern, $.extglob_pattern))
            )
          )
        )
      ),

    _word_part: ($) =>
      choice(
        $.word,
        // Literal text that the scanner ends before a structured extglob group (`foo@($x)`).
        alias($._extglob_prefix, $.word),
        $.extglob_pattern,
        $.string,
        $.raw_string,
        $.ansi_c_string,
        $.translated_string,
        $.simple_expansion,
        $.expansion,
        $.command_substitution,
        $.arithmetic_expansion,
        $.process_substitution,
        alias($._bare_dollar, $.word)
      ),

    // An extglob group (`@(a|b)`) is part of the word; `!(` only inside a word, since a leading `!`
    // before `(` negates a subshell.
    word: () =>
      token(
        seq(
          choice(noneOf('#', ...WORD_BREAKS), /\\[^\n]/, EXTGLOB_GROUP),
          repeat(choice(noneOf(...WORD_BREAKS), /\\[^\n]/, EXTGLOB_GROUP, EXTGLOB_NEGATION))
        )
      ),

    // A `#` inside a word (`a$b#c`) is literal; only a `#` that begins a word starts a comment.
    // A group whose alternatives hold expansions (`@($(cmd)|b)`); a literal group stays inside a
    // `word`, whose token is longer than the group's opening token.
    _negated_extglob_pattern: ($) =>
      seq(
        field('operator', '!('),
        optional($._extglob_alternative),
        repeat(seq('|', optional($._extglob_alternative))),
        ')'
      ),

    // An alternative may hold unquoted blanks, so each of its words is an `alternative` field; like
    // an assignment value, a word there may start with `#` (`@($x #b)`).
    _hash_word: () =>
      token(prec(1, seq('#', repeat(choice(noneOf(...WORD_BREAKS), /\\[^\n]/, EXTGLOB_GROUP, EXTGLOB_NEGATION))))),

    string: ($) =>
      seq(
        '"',
        repeat(
          choice($.string_content, $.simple_expansion, $.expansion, $.command_substitution, $.arithmetic_expansion)
        ),
        '"'
      ),

    // Where a heredoc inside `$( )` ends on a line that holds the `)`, bash reads the rest of that line
    // with its line continuations removed, even inside single quotes, and reads the bodies still queued
    // before that line right after it, even where it ends inside quotes; the scanner then splits the
    // quoted text around the continuations and the bodies.
    raw_string: ($) =>
      choice(
        /'[^']*'/,
        seq($._closer_line_raw_string_start, repeat(alias($._closer_line_raw_string_content, $.string_content)), "'")
      ),

    ansi_c_string: ($) =>
      choice(
        /\$'([^'\\]|\\(.|\n))*'/,
        seq(
          $._closer_line_ansi_c_string_start,
          repeat(alias($._closer_line_ansi_c_string_content, $.string_content)),
          "'"
        )
      ),

    simple_expansion: ($) =>
      seq(
        '$',
        choice(
          alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.variable_name),
          alias(token.immediate(/[0-9*@#?$!_-]/), $.special_variable_name)
        )
      ),

    // `${#}` and `${!}` are the special parameters `#` and `!`; with a following name they are the
    // length and indirection prefixes.
    expansion: ($) =>
      seq(
        '${',
        choice(
          seq(
            optional(field('prefix', alias(token.immediate(choice('#', '!')), $.operator))),
            field(
              'parameter',
              choice(
                alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.variable_name),
                alias(token.immediate(/[0-9]+|[*@?$_-]/), $.special_variable_name),
                alias(token.immediate(choice('#', '!')), $.special_variable_name),
                alias($._expansion_subscript, $.subscript)
              )
            ),
            optional($._expansion_operation)
          ),
          field('parameter', alias(token.immediate(choice('#', '!')), $.special_variable_name)),
          // Bash rejects `${}` and a body without a parameter (`${=1}`, `${"x"}`) only when expanding. A
          // `$name` expansion is left out, since its `$` would tie with the special parameter in `${$}`.
          repeat(
            field(
              'argument',
              choice(
                alias($._expansion_text, $.word),
                alias($._blank_expansion_text, $.word),
                alias($._angle_text, $.word),
                $.string,
                $.raw_string,
                $.ansi_c_string,
                $.translated_string,
                $.command_substitution
              )
            )
          )
        ),
        '}'
      ),

    _expansion_subscript: ($) =>
      seq(
        field('name', alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.variable_name)),
        repeat1(seq(token.immediate('['), field('index', $._subscript_index), ']'))
      ),

    _expansion_operation: ($) =>
      choice(
        seq(
          field(
            'operator',
            alias(
              token.immediate(
                choice(
                  ':-',
                  '-',
                  ':=',
                  '=',
                  ':?',
                  '?',
                  ':+',
                  '+',
                  '#',
                  '##',
                  '%',
                  '%%',
                  '^',
                  '^^',
                  ',',
                  ',,',
                  '~',
                  '~~',
                  '/',
                  '//',
                  '/#',
                  '/%',
                  ':',
                  '@'
                )
              ),
              $.operator
            )
          ),
          repeat(
            field(
              'argument',
              choice(
                alias($._expansion_text, $.word),
                alias($._blank_expansion_text, $.word),
                alias($._angle_text, $.word),
                $._quoted_or_expansion,
                alias($._bare_dollar, $.word)
              )
            )
          )
        ),
        field('operator', alias(token.immediate(choice('*', '@')), $.operator)),
        // Text without an operator (`${x y}`) is rejected by bash only when expanding.
        repeat1(
          field(
            'argument',
            choice(
              alias($._expansion_text, $.word),
              alias($._blank_expansion_text, $.word),
              alias($._angle_text, $.word),
              $._quoted_or_expansion
            )
          )
        )
      ),

    _expansion_text: () =>
      token(
        prec(
          -1,
          seq(
            choice(
              noneOf(...EXPANSION_TEXT_BREAKS, ' ', String.raw`\t`, String.raw`\n`),
              ...expansionTextUnits().slice(1)
            ),
            repeat(choice(...expansionTextUnits()))
          )
        )
      ),

    // Text led by a blank outranks `}`: otherwise the lexer, having consumed the blank as the start of
    // text, extends it into a `}` token that swallows the blank (`${x:- }`), which a reparse after an
    // edit does not reproduce, and the blank, which bash expands, would be lost.
    _blank_expansion_text: () => token(prec(1, seq(/[ \t\n]/, repeat(choice(...expansionTextUnits()))))),

    // A `<` or `>` that the text above cannot end with, e.g. before `}`. A single character, so that a
    // run before `(` leaves its last `<`/`>` to open a process substitution (`${x:-a<<(b)}`).
    _angle_text: () => token(prec(-1, /[<>]/)),

    // The zero-width substitution markers let the scanner track nesting, since a heredoc opened
    // inside a substitution has its body read before the substitution ends.
    command_substitution: ($) =>
      choice(
        seq(
          $._command_substitution_start,
          '$(',
          $._substitution_start,
          optional($._statements),
          $._substitution_end,
          ')'
        ),
        // bash 5.3 runs `${ list; }` and `${| list; }` in the current shell.
        seq(
          alias(token(/\$\{[ \t\n|]/), '${'),
          $._brace_substitution_start,
          optional($._terminated_statements),
          $._brace_substitution_end,
          '}'
        ),
        seq(alias($._backtick_open, '`'), optional($._statements), alias($._backtick_close, '`'))
      ),

    arithmetic_expansion: ($) =>
      choice(
        seq($._arithmetic_substitution_start, '$((', optional($._arithmetic_expression), $._substitution_end, '))'),
        seq('$[', $._bracket_substitution_start, optional($._arithmetic_expression), $._bracket_substitution_end, ']')
      ),

    _arithmetic_expression: ($) =>
      choice(
        $.number,
        alias($._arithmetic_variable, $.variable_name),
        alias($._arithmetic_subscript, $.subscript),
        $.simple_expansion,
        $.expansion,
        $.command_substitution,
        $.arithmetic_expansion,
        $.string,
        alias($._arithmetic_unary, $.unary_expression),
        alias($._arithmetic_postfix, $.postfix_expression),
        alias($._arithmetic_binary, $.binary_expression),
        alias($._arithmetic_ternary, $.ternary_expression),
        alias($._arithmetic_parenthesized, $.parenthesized_expression)
      ),

    number: ($) =>
      choice(
        /(0[xX][0-9a-fA-F]+|[0-9]+#[0-9a-zA-Z@_]+|[0-9]+)/,
        // The digits of a based number may come from an expansion (`10#${x}`).
        seq(/[0-9]+#/, choice($.simple_expansion, $.expansion))
      ),

    comment: ($) => choice(token(prec(-10, /#.*/)), $._joined_comment, $._backtick_comment),
  },
});

/**
 * A regular expression matching any single character except the given ones.
 *
 * @param {...string} characters
 * @returns {RegExp}
 */
function noneOf(...characters) {
  return new RegExp(`[^${characters.join('')}]`);
}

// The units of text inside `${…}`: a character, a run of `<`/`>` not before `(`, and an escape.
function expansionTextUnits() {
  return [noneOf(...EXPANSION_TEXT_BREAKS), seq(/[<>]+/, noneOf('(', ...EXPANSION_TEXT_BREAKS)), /\\(.|\n)/];
}

/**
 * A regular expression matching a literal extglob group opened by `prefix`, whose body may contain
 * groups nested up to `depth` levels.
 *
 * @param {string} prefix
 * @param {number} depth
 * @returns {RegExp}
 */
function extglobGroup(prefix, depth) {
  // Quotes and expansions are left to `extglob_pattern`, which parses them. Blanks and newlines are
  // part of a group, as bash's extglob lexer keeps them in the word.
  const literal = '[^()\\\\$`\'"]';
  let body = `(?:${literal}|\\\\.)`;
  for (let level = 1; level < depth; level++) {
    body = `(?:${literal}|\\\\.|[?*+@!]\\(${body}*\\))`;
  }
  return new RegExp(`${prefix}\\(${body}*\\)`);
}
