test/corpus/heredocs.txt
================================================================================
Heredoc with expansions
================================================================================

cat <<EOF
a $b ${c} $(d) `e` $((1 + 1))
\$(not) \`not\`
EOF

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (simple_expansion
      (variable_name))
    (heredoc_content)
    (expansion
      parameter: (variable_name))
    (heredoc_content)
    (command_substitution
      (command
        name: (command_name
          (word))))
    (heredoc_content)
    (command_substitution
      (command
        name: (command_name
          (word))))
    (heredoc_content)
    (arithmetic_expansion
      (binary_expression
        left: (number)
        right: (number)))
    (heredoc_content)
    (heredoc_end)))

================================================================================
Quoted heredocs are literal
================================================================================

cat <<'EOF'
$(not) `not`
EOF
cat <<"EOF"
$x
EOF
cat <<\EOF
$x
EOF

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end)))

================================================================================
Heredoc with a statement after the operator
================================================================================

cat <<EOF; echo after
body
EOF
cat <<EOF | sh && echo ok
body
EOF

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (command
    name: (command_name
      (word))
    argument: (word))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (list
    left: (pipeline
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (command
        name: (command_name
          (word))))
    right: (command
      name: (command_name
        (word))
      argument: (word)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end)))

================================================================================
Several heredocs on one line
================================================================================

cat <<A <<-B
a
A
	b
	B
echo done

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Heredoc body starting with a backslash
================================================================================

cat <<EOF
\$x
EOF

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end)))

================================================================================
Heredoc delimiter continued across lines
================================================================================

cat <<E\
OF
body
EOF

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end)))

================================================================================
Heredoc inside a command substitution
================================================================================

x=$(cat <<EOF
body
EOF
)

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (heredoc_body
          (heredoc_content)
          (heredoc_end))))))

================================================================================
Heredoc that reaches the end of input
================================================================================

cat <<EOF
body

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end)))

================================================================================
Heredoc with a newline inside a header string
================================================================================

cat <<EOF "a
b"
body
EOF

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start))
    argument: (string
      (string_content)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end)))

================================================================================
Heredoc inside backquotes
================================================================================

x=`cat <<EOF
body
EOF`

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (heredoc_body
          (heredoc_content)
          (heredoc_end))))))

================================================================================
Heredoc inside a command substitution in a heredoc body
================================================================================

cat <<A
$(cat <<B
b
B
)
A
echo x

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (command_substitution
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (heredoc_body
        (heredoc_content)
        (heredoc_end)))
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Heredocs on one line inside a heredoc body
================================================================================

cat <<A <<C
$(cat <<B
b
B
)
A
c
C
echo x

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (command_substitution
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (heredoc_body
        (heredoc_content)
        (heredoc_end)))
    (heredoc_content)
    (heredoc_end))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Heredoc operator before a multi-line substitution
================================================================================

cat <<A; x=$(
echo b
); echo "$x"
a
A
echo z

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          argument: (word)))))
  (command
    name: (command_name
      (word))
    argument: (string
      (simple_expansion
        (variable_name))))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Heredoc operator before a substitution with its own heredoc
================================================================================

cat <<A; x=$(cat <<B
b
B
); echo "$x"
a
A
echo z

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (heredoc_body
          (heredoc_content)
          (heredoc_end)))))
  (command
    name: (command_name
      (word))
    argument: (string
      (simple_expansion
        (variable_name))))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Non-ASCII heredoc delimiters
================================================================================

cat <<終了
x
終了
echo y

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Heredoc delimiter continued across lines keeps expansions
================================================================================

cat <<E\
OF
$x
EOF
cat <<E\OF
$x
EOF

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (simple_expansion
      (variable_name))
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end)))

================================================================================
Heredocs nested in substitutions two levels deep
================================================================================

cat <<OUTER
Outer Heredoc Start
$(cat <<INNER
Inner Heredoc Content
$(cat <<INNERMOST
Innermost Heredoc Content
INNERMOST
)
INNER)
Outer Heredoc End
OUTER
echo after

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (command_substitution
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (heredoc_body
        (heredoc_content)
        (command_substitution
          (command
            name: (command_name
              (word))
            redirect: (heredoc_redirect
              delimiter: (heredoc_start)))
          (heredoc_body
            (heredoc_content)
            (heredoc_end)))
        (heredoc_content)
        (heredoc_end)))
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Heredoc with a long delimiter
================================================================================

cat <<XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
hello
XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
echo done

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Heredoc delimiter continued inside double quotes
================================================================================

cat <<"E\
OF"
body
EOF
echo done

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Heredoc operator before a multi-line arithmetic expansion
================================================================================

cat <<EOF $(( 1 +
2 ))
body
EOF
echo z

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (heredoc_redirect
      delimiter: (heredoc_start))
    argument: (arithmetic_expansion
      (binary_expression
        left: (number)
        right: (number))))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Heredoc in a substitution that closes on its line
================================================================================

x=$(cat <<A)
body
A
y=$(
echo in
)

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start))))))
  (command
    name: (command_name
      (word)))
  (command
    name: (command_name
      (word)))
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          argument: (word))))))

================================================================================
Heredoc in a substitution ends at a line starting with its delimiter and holding a paren
================================================================================

x=$(cat <<EOF
body
EOF echo done)
y=$(cat <<EOF
body
EOF)

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (heredoc_body
          (heredoc_content)
          (heredoc_end))
        (command
          name: (command_name
            (word))
          argument: (word)))))
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (heredoc_body
          (heredoc_content)
          (heredoc_end))
        (command
          name: (command_name
            (word)))))))

================================================================================
Heredoc in a substitution keeps a line starting with its delimiter without a paren
================================================================================

x=$(cat <<EOF
EOF x
EOF
)

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (heredoc_body
          (heredoc_content)
          (heredoc_content)
          (heredoc_content)
          (heredoc_end))))))

================================================================================
Line ending a heredoc at a substitution's paren is read without its line continuations
================================================================================

echo "$(cat <<EOF
EOF)" 'a\
b' $'c\
d' # e\
f
echo $(cat <<'EOF'
EOF) 'a\
b'

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (string
      (command_substitution
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (heredoc_body
          (heredoc_content)
          (heredoc_end))))
    argument: (raw_string
      (string_content)
      (string_content))
    argument: (ansi_c_string
      (string_content)
      (string_content)))
  (comment)
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (heredoc_body
        (heredoc_content)
        (heredoc_end)))
    argument: (raw_string)))

================================================================================
Heredocs queued before a line ending a heredoc at a substitution's paren start after that line
================================================================================

v=$(cat <<EOF; cat <<END
body
EOF) echo x
end
END
echo "$(cat <<EOF; cat <<END
EOF) y
end
END
)"

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (heredoc_body
          (heredoc_content)
          (heredoc_end))))
    name: (command_name
      (word))
    argument: (word))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (command
    name: (command_name
      (word))
    argument: (string
      (command_substitution
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (command
          name: (command_name
            (word))
          redirect: (heredoc_redirect
            delimiter: (heredoc_start)))
        (heredoc_body
          (heredoc_content)
          (heredoc_end)))
      (string_content)
      (heredoc_body
        (heredoc_content)
        (heredoc_end))
      (string_content))))

================================================================================
Rest of a line ending a heredoc at a substitution's paren is a command when a deferred body ends at a paren too
================================================================================

v=$(echo $(cat <<EOF; cat <<END
x
EOF) c i1
END)
v=$(echo $(cat <<EOF; cat <<END
x
EOF $(y)) c i2
END)

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          argument: (command_substitution
            (command
              name: (command_name
                (word))
              redirect: (heredoc_redirect
                delimiter: (heredoc_start)))
            (command
              name: (command_name
                (word))
              redirect: (heredoc_redirect
                delimiter: (heredoc_start)))
            (heredoc_body
              (heredoc_content)
              (heredoc_end))))
        (command
          name: (command_name
            (word))
          argument: (word))
        (heredoc_body
          (heredoc_content)
          (heredoc_end)))))
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))
          argument: (command_substitution
            (command
              name: (command_name
                (word))
              redirect: (heredoc_redirect
                delimiter: (heredoc_start)))
            (command
              name: (command_name
                (word))
              redirect: (heredoc_redirect
                delimiter: (heredoc_start)))
            (heredoc_body
              (heredoc_content)
              (heredoc_end))
            (command
              name: (command_name
                (command_substitution
                  (command
                    name: (command_name
                      (word))))))))
        (command
          name: (command_name
            (word))
          argument: (word))
        (heredoc_body
          (heredoc_content)
          (heredoc_end))))))

================================================================================
Line ending a quoted heredoc at a substitution's paren ends at its first newline
================================================================================

echo $(cat <<'EOF'; cat <<END
EOF) a \
end
END
b
echo $(cat <<'EOF'; cat <<END
EOF) a\
end
END
b
echo $(cat <<'EOF'; cat <<END
EOF) 'a
end
END
b'

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (heredoc_body
        (heredoc_content)
        (heredoc_end)))
    argument: (word)
    (heredoc_body
      (heredoc_content)
      (heredoc_end))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (heredoc_body
        (heredoc_content)
        (heredoc_end)))
    argument: (concatenation
      (word)
      (heredoc_body
        (heredoc_content)
        (heredoc_end))
      (word)))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (heredoc_body
        (heredoc_content)
        (heredoc_end)))
    argument: (raw_string
      (string_content)
      (heredoc_body
        (heredoc_content)
        (heredoc_end))
      (string_content))))

================================================================================
Line ending a heredoc at a substitution's paren ends at a newline inside backquotes
================================================================================

echo $(cat <<EOF
EOF) `echo a
echo b` # c\
echo d

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        redirect: (heredoc_redirect
          delimiter: (heredoc_start)))
      (heredoc_body
        (heredoc_content)
        (heredoc_end)))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (word))
      (command
        name: (command_name
          (word))
        argument: (word))))
  (comment)
  (command
    name: (command_name
      (word))
    argument: (word)))
